to the language modules take place, starting from the stable release
1.3.6.

This branch is also the basis for the unofficial "swig1.3" Debian
package that is available from:
http://www.math.uni-magdeburg.de/~mkoeppe/imo-debian

Eventually this branch will be merged back to the trunk of the CVS
tree (maybe).

Version 1.3.14 (In progress)
============================
06/17/2002: beazley
            Fixed problems with static members and enums in templates.

Version 1.3.13 (June 17, 2002)
==============================
06/16/2002: beazley
            Fixed a bug with __FILE__ expansion in the preprocessor.   On Windows,
            the backslash (\) is now converted to (\\) in the string literal
            used for __FILE__.  Reported by Steve Glaser.

06/14/2002: beazley
            Fixed warning message about 'name private in this context'.  The
            warning is only generated for public methods.  Reported by
            Scott Michel.
 
06/14/2002: beazley
            Fixed some problems related to template instantiation 
            and namespaces.   When SWIG expands a template, it does
            so with fully resolved types.  For example, if you have this:

                template<class T> class foo { };
                typedef double Double;
                %template(foo_d) foo<Double>;

            then, it is handled as foo<double> in the typesystem.
            This fixes a number of subtle problems with inheritance
            and templates.

06/14/2002: ljohnson (Lyle Johnson)
            [Ruby] Added missing bool typemaps for INPUT, OUTPUT and
	    INOUT in Lib/ruby/typemaps.i.

05/29/2002: cheetah (William Fulton)
            [Java] Fix for a couple of broken pragmas.

05/29/2002: cheetah (William Fulton)
            Fix for unnecessary cast when wrapping global variable where 
            the type is not parsed by SWIG - Java variables example 
            failure as reported by Larry Virden.

06/10/2002: beazley